refactor: 프로젝트 리팩토링

--- a/package.json
+++ b/package.json
@@ -35,14 +35,16 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
-    "baseline-browser-mapping": "^2.8.32",
+    "baseline-browser-mapping": "2.9.0-beta2",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.7.3",
     "prisma": "^7.0.1",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
