--- a/package.json
+++ b/package.json
@@ -13,45 +13,46 @@
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.946.0",
+    "@aws-sdk/s3-request-presigner": "^3.946.0",
     "@headlessui/react": "^2.2.9",
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@tabler/icons-react": "^3.35.0",
     "axios": "^1.13.2",
-    "better-auth": "^1.4.2",
+    "better-auth": "^1.4.5",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
-    "firebase": "^12.6.0",
-    "framer-motion": "^12.23.24",
-    "next": "16.0.4",
+    "framer-motion": "^12.23.25",
+    "next": "16.0.7",
     "nextjs-toploader": "^3.9.17",
     "pg": "^8.16.3",
-    "react": "19.2.0",
+    "react": "19.2.1",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.13",
     "zod-form-data": "^3.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^22",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^22.19.1",
     "@types/pg": "^8.15.6",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "babel-plugin-react-compiler": "1.0.0",
-    "baseline-browser-mapping": "2.9.0-beta2",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "baseline-browser-mapping": "2.9.4",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.7.3",
-    "prisma": "^7.0.1",
-    "tailwindcss": "^4",
-    "tsx": "^4.20.6",
-    "typescript": "^5"
+    "prettier": "^3.7.4",
+    "prisma": "^7.1.0",
+    "tailwindcss": "^4.1.17",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
